feat: Implement invoice management system
- Added Invoice and Payment models with JPA annotations for persistence.
- Created DTOs for InvoiceRequest, InvoiceItemRequest, and PaymentRequest to handle incoming data.
- Developed InvoiceService to manage invoice creation, updates, and payment processing.
- Introduced InvoiceRepository and PaymentRepository for database interactions.
- Updated PatientController to include endpoints for retrieving patient invoices.
- Added CSV data files for initial invoice and payment records.
- Enhanced Swagger documentation for invoice-related APIs.